--- a/08_refactoring.ipynb
+++ b/08_refactoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
        "dict_keys([b'batch_label', b'labels', b'data', b'filenames'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
        "(10000, 3072)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
        "(10000, 3, 32, 32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
        "9"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +179,7 @@
        "'truck'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "         [-0.0451, -0.1314, -0.1588,  ...,  0.0490, -0.1706, -0.2176]]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,12 +334,11 @@
    ],
    "source": [
     "class ConvBlock(torch.nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, p=0.6):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
     "        super().__init__()\n",
     "        self.conv1=torch.nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=1, padding=1)\n",
     "        self.adjust_channels_conv_1=torch.nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=1, padding=0)\n",
     "        self.batch_norm_2d=torch.nn.BatchNorm2d(out_channels)\n",
-    "        self.dropout=torch.nn.Dropout(p)\n",
     "        self.relu=torch.nn.ReLU()\n",
     "        \n",
     "    def forward(self, input):\n",
@@ -348,20 +347,18 @@
     "        x=self.conv1(x)\n",
     "        x=self.batch_norm_2d(x)\n",
     "        x=self.relu(x)\n",
-    "        x=self.dropout(x)\n",
     "        identity=self.adjust_channels_conv_1(identity)\n",
     "        x=torch.add(x, identity)\n",
     "        return x, identity\n",
     "    \n",
     "class ConvBlockMaxPool(torch.nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, p=0.6):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
     "        super().__init__()\n",
     "        self.conv1=torch.nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=1, padding=1)\n",
     "        self.adjust_channels_conv_1=torch.nn.Conv2d(in_channels, out_channels, kernel_size=1, stride=1, padding=0)\n",
     "        self.batch_norm_2d=torch.nn.BatchNorm2d(out_channels)\n",
     "        self.relu=torch.nn.ReLU()\n",
     "        self.maxpool=torch.nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
-    "        self.dropout=torch.nn.Dropout(p)\n",
     "        \n",
     "    def forward(self, input):\n",
     "        x=input[0]\n",
@@ -369,7 +366,6 @@
     "        x=self.conv1(x)\n",
     "        x=self.batch_norm_2d(x)\n",
     "        x=self.relu(x)\n",
-    "        x=self.dropout(x)\n",
     "        identity=self.adjust_channels_conv_1(identity)\n",
     "        x=torch.add(x, identity)\n",
     "        x=self.maxpool(x)\n",
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,13 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73a20f25fdd14338a2d54582b8c786bf",
+       "model_id": "9238ba0d8ceb4ce28c3fae86b21b8dc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -491,17 +487,18 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 38\u001b[0m\n\u001b[0;32m     36\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()                         \u001b[38;5;66;03m# ableiten\u001b[39;00m\n\u001b[0;32m     37\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()                        \u001b[38;5;66;03m# Gewichte aktualisieren\u001b[39;00m\n\u001b[1;32m---> 38\u001b[0m     epoch_losses\u001b[38;5;241m.\u001b[39mappend(\u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)        \u001b[38;5;66;03m# Loss speichern\u001b[39;00m\n\u001b[0;32m     39\u001b[0m losses\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28msum\u001b[39m(epoch_losses)\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(epoch_losses))\n\u001b[0;32m     40\u001b[0m valid_losses_epoch\u001b[38;5;241m=\u001b[39m[]\n",
+      "Cell \u001b[1;32mIn[15], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m pred\u001b[38;5;241m=\u001b[39mmodel(xb)                          \u001b[38;5;66;03m# Forward-Propagation\u001b[39;00m\n\u001b[0;32m     35\u001b[0m loss\u001b[38;5;241m=\u001b[39mloss_func(pred, yb)                \u001b[38;5;66;03m# Loss berechnen\u001b[39;00m\n\u001b[1;32m---> 36\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m                         \u001b[38;5;66;03m# ableiten\u001b[39;00m\n\u001b[0;32m     37\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()                        \u001b[38;5;66;03m# Gewichte aktualisieren\u001b[39;00m\n\u001b[0;32m     38\u001b[0m epoch_losses\u001b[38;5;241m.\u001b[39mappend(loss\u001b[38;5;241m.\u001b[39mitem())        \u001b[38;5;66;03m# Loss speichern\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Bernd\\anaconda3\\envs\\mytorch\\lib\\site-packages\\torch\\_tensor.py:492\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    482\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    483\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    484\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    485\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    491\u001b[0m     )\n\u001b[1;32m--> 492\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    493\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    494\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Bernd\\anaconda3\\envs\\mytorch\\lib\\site-packages\\torch\\autograd\\__init__.py:251\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    246\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    248\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    250\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    252\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    253\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    254\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    255\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    256\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    257\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    258\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    259\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "\n",
     "lr=0.0001\n",
     "batch_size=64\n",
     "epochs=40\n",
-    "hidden_size=50\n",
+    "hidden_size=150\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
@@ -514,7 +511,7 @@
     "\n",
     "model=CifarModel(hidden_size).to(device)\n",
     "#weight_decay: Hohe Gewichte werden bestraft, um Overfitting zu vermeiden\n",
-    "optimizer=torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=0.00001)\n",
+    "optimizer=torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=0.0001)\n",
     "# CrossEntropyLoss: Klassifikationsproblem mit mehreren Klassen\n",
     "loss_func=torch.nn.CrossEntropyLoss()\n",
     "\n",
